@@ -11,17 +11,20 @@ import com.github.javaparser.ast.stmt.Statement;
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.eclipse.jgit.diff.DiffEntry;
 import org.eclipse.jgit.revwalk.RevCommit;
+import org.example.Main;
 import org.example.model.FileHistory;
 import org.example.model.MethodHistory;
 import org.example.services.GitService;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class HistoryAnalyzer {
+    private static final Logger LOGGER = Logger.getLogger(HistoryAnalyzer.class.getName());
+
     private final GitService gitService;
-    private final ParserConfiguration parserConfig;
 
     public static class AnalysisResult {
         public final Map<String, MethodHistory> methodHistories;
@@ -35,13 +38,13 @@ public class HistoryAnalyzer {
 
     public HistoryAnalyzer(GitService gitService) {
         this.gitService = gitService;
-        this.parserConfig = new ParserConfiguration()
+        ParserConfiguration parserConfig = new ParserConfiguration()
                 .setLanguageLevel(ParserConfiguration.LanguageLevel.JAVA_17_PREVIEW);
-        StaticJavaParser.setConfiguration(this.parserConfig);
+        StaticJavaParser.setConfiguration(parserConfig);
     }
 
     public AnalysisResult analyzeCommitHistory(Map<String, RevCommit> bugCommits) throws GitAPIException, IOException {
-        System.out.println("Inizio costruzione della storia dei metodi e dei file...");
+        LOGGER.info("Inizio costruzione della storia dei metodi e dei file...");
         Map<String, MethodHistory> methodHistories = new HashMap<>();
         Map<String, FileHistory> fileHistories = new HashMap<>();
 
@@ -50,60 +53,72 @@ public class HistoryAnalyzer {
 
         for (RevCommit commit : allCommits) {
             commitCount++;
-            if (commitCount % 500 == 0) System.out.printf("Analisi commit %d...%n", commitCount);
+            if (commitCount % 500 == 0) {
+                LOGGER.log(Level.INFO, "Analisi commit {0}...", commitCount);
+            }
 
             try {
                 if (commit.getParentCount() == 0) continue;
 
-                // Determina una sola volta se il commit è un bug-fix
-                boolean isBugFixCommit = bugCommits.containsKey(commit.getName());
                 List<DiffEntry> diffs = gitService.getChangedFilesInCommit(commit);
-
                 for (DiffEntry diff : diffs) {
-                    if (diff.getChangeType() == DiffEntry.ChangeType.RENAME) continue;
-
-                    String newPath = diff.getNewPath().replace("\\", "/");
-                    String oldPath = diff.getOldPath().replace("\\", "/");
-
-                    if (!newPath.endsWith(".java")) continue;
-
-                    String contentAfter = gitService.getFileContentAtCommit(commit, newPath);
-                    if (org.example.Main.isFileExcluded(newPath, contentAfter)) continue;
-
-                    String contentBefore = gitService.getFileContentAtCommit(commit.getParent(0), oldPath);
-
-                    // 1. Calcola churn a livello di FILE
-                    calculateFileLevelChurn(commit, newPath, contentBefore, contentAfter, fileHistories);
-
-                    // 2. Calcola churn a livello di METODO
-                    Map<String, List<String>> stmtsBefore = getMethodStatements(contentBefore, oldPath, commit.getName());
-                    Map<String, List<String>> stmtsAfter = getMethodStatements(contentAfter, newPath, commit.getName());
-                    updateMethodHistoriesWithDiff(newPath, stmtsBefore, stmtsAfter, commit, methodHistories, isBugFixCommit);
-
-                    // 3. --- LOGICA DI ASSOCIAZIONE BUG-FIX ---
-                    // Se questo è un commit di fix, dobbiamo associare questo commit a tutti i metodi
-                    // presenti nel file *dopo* la modifica.
-                    if (isBugFixCommit) {
-                        for (String signature : stmtsAfter.keySet()) {
-                            String uniqueID = newPath + "/" + signature;
-                            methodHistories.computeIfAbsent(uniqueID, MethodHistory::new).addFix(commit);
-                        }
-                    }
-                    // --- FINE DELLA LOGICA REINTRODOTTA ---
+                    analyzeDiff(diff, commit, bugCommits, methodHistories, fileHistories);
                 }
             } catch (org.eclipse.jgit.errors.MissingObjectException e) {
-                System.err.println("[WARNING] Saltato commit " + commit.getName() + " a causa di un oggetto Git mancante.");
+                LOGGER.log(Level.WARNING, "[WARNING] Saltato commit {0} a causa di un oggetto Git mancante.", commit.getName());
             }
         }
-        System.out.println("Analisi storica completata.");
+        LOGGER.info("Analisi storica completata.");
         return new AnalysisResult(methodHistories, fileHistories);
     }
 
+    /**
+     * Analizza una singola modifica (DiffEntry) all'interno di un commit.
+     */
+    private void analyzeDiff(DiffEntry diff, RevCommit commit, Map<String, RevCommit> bugCommits,
+                             Map<String, MethodHistory> methodHistories, Map<String, FileHistory> fileHistories) throws IOException {
+
+        if (diff.getChangeType() == DiffEntry.ChangeType.RENAME) return;
+
+        String newPath = diff.getNewPath().replace("\\", "/");
+        if (!newPath.endsWith(".java")) return;
+
+        String contentAfter = gitService.getFileContentAtCommit(commit, newPath);
+        if (Main.isFileExcluded(newPath, contentAfter)) return;
+
+        String oldPath = diff.getOldPath().replace("\\", "/");
+        String contentBefore = gitService.getFileContentAtCommit(commit.getParent(0), oldPath);
+        boolean isBugFixCommit = bugCommits.containsKey(commit.getName());
+
+        // 1. Calcola churn a livello di FILE
+        calculateFileLevelChurn(commit, newPath, contentBefore, contentAfter, fileHistories);
+
+        // 2. Calcola churn a livello di METODO
+        Map<String, List<String>> stmtsBefore = getMethodStatements(contentBefore, oldPath, commit.getName());
+        Map<String, List<String>> stmtsAfter = getMethodStatements(contentAfter, newPath, commit.getName());
+        updateMethodHistoriesWithDiff(newPath, stmtsBefore, stmtsAfter, commit, methodHistories, isBugFixCommit);
+
+        // 3. Associa il bug-fix ai metodi
+        if (isBugFixCommit) {
+            associateBugFixToMethods(newPath, stmtsAfter.keySet(), commit, methodHistories);
+        }
+    }
+
+    /**
+     * Associa un commit di fix a tutti i metodi presenti nel file modificato.
+     */
+    private void associateBugFixToMethods(String filePath, Set<String> signatures, RevCommit commit, Map<String, MethodHistory> histories) {
+        for (String signature : signatures) {
+            String uniqueID = filePath + "/" + signature;
+            histories.computeIfAbsent(uniqueID, MethodHistory::new).addFix(commit);
+        }
+    }
+
     private void calculateFileLevelChurn(RevCommit commit, String filePath, String contentBefore, String contentAfter, Map<String, FileHistory> fileHistories) {
+        if (contentBefore.equals(contentAfter)) return;
+
         List<String> fileLinesBefore = Arrays.asList(contentBefore.split("\r\n|\r|\n"));
         List<String> fileLinesAfter = Arrays.asList(contentAfter.split("\r\n|\r|\n"));
-
-        if (fileLinesBefore.equals(fileLinesAfter)) return;
 
         Patch<String> filePatch = DiffUtils.diff(fileLinesBefore, fileLinesAfter);
         int linesAdded = 0;
@@ -145,7 +160,6 @@ public class HistoryAnalyzer {
             if (added > 0 || deleted > 0) {
                 MethodHistory history = histories.computeIfAbsent(uniqueID, MethodHistory::new);
                 history.addChange(commit, added, deleted);
-                // La metrica NFix è legata al churn: conta solo i fix che hanno *cambiato* il metodo.
                 if (isBugFix) {
                     history.incrementFixCount();
                 }
@@ -161,19 +175,16 @@ public class HistoryAnalyzer {
         try {
             StaticJavaParser.parse(fileContent).findAll(MethodDeclaration.class).forEach(md -> {
                 String signature = md.getSignature().asString();
+                // Smell 4: Sostituito con .toList()
                 List<String> statements = md.getBody()
                         .map(body -> body.getStatements().stream()
                                 .map(Statement::toString)
-                                .collect(Collectors.toList()))
+                                .toList())
                         .orElse(Collections.emptyList());
                 methods.put(signature, statements);
             });
         } catch (Exception | StackOverflowError e) {
-            System.err.println(
-                    "[PARSER_ERROR] " + e.getClass().getSimpleName()
-                            + " durante il parsing di: " + filePath
-                            + " (commit: " + commitHash + ")"
-            );
+            LOGGER.log(Level.WARNING, "Errore di parsing, file saltato: {0} (commit: {1})", new Object[]{filePath, commitHash});
         }
         return methods;
     }
